--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,5 +19,10 @@
         android:layout_height="wrap_content"
         android:textSize="40sp"
         android:text="안녕하세요"/>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="40sp"
+        android:text="dldkjdlkdjl"/>
 
 </LinearLayout>
