--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,5 +24,11 @@
         android:layout_height="wrap_content"
         android:textSize="40sp"
         android:text="롤하고싶다"/>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="40sp"
+        android:text="진격거 보고싶다"/>
+
 
 </LinearLayout>
