--- a/app/src/main/res/drawable/id_password_edit.xml
+++ b/app/src/main/res/drawable/id_password_edit.xml
@@ -3,6 +3,6 @@
     android:shape="rectangle">
     <solid android:color="#B2C1D7"/>
     <corners android:radius="20dp"/>
-    <padding android:left="15dp"/>
+    <padding android:left="15dp" android:top="8dp" android:bottom="8dp"/>
 
 </shape>
