--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -44,6 +44,21 @@
             android:background="@drawable/id_password_edit"
             android:hint="이메일 입력"
             android:textColorHint="#6983A9"/>
+        <TextView
+            android:layout_marginTop="10dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="아이디"
+            android:textSize="20dp"
+            android:textStyle="bold"
+            android:textColor="#3c567b"/>
+        <EditText
+            android:layout_marginTop="5dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/id_password_edit"
+            android:hint="이메일 입력"
+            android:textColorHint="#6983A9"/>
 
 
     </LinearLayout>
