--- a/app/src/main/res/layout/activity_find_passwwod.xml
+++ b/app/src/main/res/layout/activity_find_passwwod.xml
@@ -1,10 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".FindidActivity">
+    android:padding="20dp">
 
     <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
@@ -33,7 +31,7 @@
                 android:gravity="center"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="아이디 찾기"
+                android:text="비밀번호 찾기"
                 android:textStyle="bold"
                 android:textSize="25dp"
                 android:textColor="#3c567b"/>
@@ -88,3 +86,14 @@
 
 
     </RelativeLayout>
+    <Button
+        android:layout_width="300dp"
+        android:layout_centerHorizontal="true"
+        android:layout_height="wrap_content"
+        android:text="회원가입 완료"
+        android:textSize="20sp"
+        android:textColor="@color/white"
+        android:textStyle="bold"
+        android:background="@drawable/id_pass_btn"
+        android:layout_alignParentBottom="true"/>
+</RelativeLayout>
