--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -38,6 +38,7 @@
             android:textStyle="bold"
             android:textColor="#3c567b"/>
         <EditText
+            android:id="@+id/email_edit_txt"
             android:layout_marginTop="5dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -45,6 +46,7 @@
             android:hint="이메일 입력"
             android:textColorHint="#6983A9"/>
         <TextView
+            android:id="@+id/password_edit_txt"
             android:layout_marginTop="10dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -53,6 +55,7 @@
             android:textStyle="bold"
             android:textColor="#3c567b"/>
         <EditText
+            android:id="@+id/password_check_edit_txt"
             android:layout_marginTop="5dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -107,6 +110,7 @@
 
     </LinearLayout>
     <Button
+        android:id="@+id/btn_signup"
         android:layout_width="300dp"
         android:layout_centerHorizontal="true"
         android:layout_height="wrap_content"
