--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -48,6 +48,7 @@
                 android:textStyle="bold"
                 android:textSize="20sp"/>
             <EditText
+                android:inputType="textEmailAddress"
                 android:layout_marginStart="30dp"
                 android:layout_marginEnd="30dp"
                 android:layout_width="match_parent"
