--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -4,6 +4,7 @@
     android:layout_height="match_parent"
     android:padding="20dp">
     <ImageView
+        android:id="@+id/backBtn"
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:src="@drawable/baseline_arrow_back_24"/>
