--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -49,6 +49,7 @@
                 android:textSize="20sp"/>
             <EditText
                 android:inputType="textEmailAddress"
+                android:id="@+id/email_edit_txt_main"
                 android:layout_marginStart="30dp"
                 android:layout_marginEnd="30dp"
                 android:layout_width="match_parent"
@@ -66,6 +67,7 @@
                 android:textStyle="bold"
                 android:textSize="20sp"/>
             <EditText
+                android:id="@+id/password_edit_txt_main"
                 android:layout_marginStart="30dp"
                 android:layout_marginEnd="30dp"
                 android:layout_marginBottom="40dp"
@@ -76,6 +78,7 @@
                 android:backgroundTint="#3c567b"/>
         </LinearLayout>
         <Button
+            android:id="@+id/btn_login"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="100dp"
