--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -165,11 +165,12 @@
             android:layout_width="30dp"
             android:layout_height="30dp"
             android:src="@drawable/user_img"/>
+
         <ImageView
+            android:layout_width="23dp"
+            android:layout_height="23dp"
             android:layout_weight="1"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:src="@drawable/star_img"/>
+            android:src="@drawable/setting_img" />
 
     </LinearLayout>
 
