--- a/app/src/main/res/layout/fragment_community.xml
+++ b/app/src/main/res/layout/fragment_community.xml
@@ -2,7 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:layout_marginBottom="100dp">
     <LinearLayout
         android:layout_weight="90"
         android:layout_width="match_parent"
@@ -19,19 +20,19 @@
             <ImageView
                 android:layout_width="50dp"
                 android:layout_height="50dp"
-                android:src="@drawable/gongguimg"
+                android:src="@drawable/community_1"
                 android:background="@drawable/blue"/>
             <ImageView
                 android:layout_marginStart="30dp"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
-                android:src="@drawable/gonggu"
+                android:src="@drawable/community_2"
                 android:background="@drawable/yellow"/>
             <ImageView
                 android:layout_marginStart="30dp"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
-                android:src="@drawable/playimg"
+                android:src="@drawable/community_3"
                 android:background="@drawable/pink"/>
         </LinearLayout>
 
@@ -52,7 +53,7 @@
                     <ImageView
                         android:layout_width="match_parent"
                         android:layout_height="30dp"
-                        android:src="@drawable/gongguimg"
+                        android:src="@drawable/community_1"
                         android:layout_gravity="center"/>
                     <TextView
                         android:layout_marginTop="10dp"
@@ -84,7 +85,7 @@
                     <ImageView
                         android:layout_width="match_parent"
                         android:layout_height="30dp"
-                        android:src="@drawable/gonggu"
+                        android:src="@drawable/community_2"
                         android:layout_gravity="center"/>
                     <TextView
                         android:layout_marginTop="10dp"
@@ -115,7 +116,7 @@
                     <ImageView
                         android:layout_width="match_parent"
                         android:layout_height="30dp"
-                        android:src="@drawable/playimg"
+                        android:src="@drawable/community_3"
                         android:layout_gravity="center"/>
                     <TextView
                         android:layout_marginTop="10dp"
@@ -136,44 +137,7 @@
                         android:background="@drawable/whitepink"
                         android:text="햇반2종"/>
                 </LinearLayout>
-
-
             </LinearLayout>
         </ScrollView>
-
     </LinearLayout>
-    <LinearLayout
-        android:layout_marginStart="10dp"
-        android:layout_marginEnd="10dp"
-        android:layout_marginBottom="10dp"
-        android:gravity="center"
-        android:layout_weight="30"
-        android:layout_width="match_parent"
-        android:layout_height="100dp">
-        <ImageView
-            android:layout_weight="1"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:src="@drawable/home"/>
-        <ImageView
-            android:layout_weight="1"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:src="@drawable/community_img"/>
-        <ImageView
-            android:layout_weight="1"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:src="@drawable/user_img"/>
-
-        <ImageView
-            android:layout_width="23dp"
-            android:layout_height="23dp"
-            android:layout_weight="1"
-            android:src="@drawable/setting_img" />
-
-    </LinearLayout>
-
 </LinearLayout>
-
-
