하단바 아이콘 수정 및 fragment

--- a/app/src/main/res/layout/activity_bottom_bar.xml
+++ b/app/src/main/res/layout/activity_bottom_bar.xml
@@ -32,14 +32,14 @@
             android:layout_weight="1"
             android:layout_width="30dp"
             android:layout_height="30dp"
-            android:src="@drawable/community_img"/>
+            android:src="@drawable/community"/>
         <ImageView
             android:id="@+id/bar_myPage_btn"
             android:layout_gravity="center"
             android:layout_weight="1"
             android:layout_width="30dp"
             android:layout_height="30dp"
-            android:src="@drawable/user_img"/>
+            android:src="@drawable/user"/>
 
         <ImageView
             android:id="@+id/bar_setting_btn"
@@ -47,7 +47,7 @@
             android:layout_width="23dp"
             android:layout_height="23dp"
             android:layout_weight="1"
-            android:src="@drawable/setting_img" />
+            android:src="@drawable/setting" />
     </LinearLayout>
 
 
