화면 수정 완료(홈,커뮤니티 아이콘)

--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -19,19 +19,19 @@
             <ImageView
                 android:layout_width="50dp"
                 android:layout_height="50dp"
-                android:src="@drawable/gongguimg"
+                android:src="@drawable/_9"
                 android:background="@drawable/blue"/>
             <ImageView
                 android:layout_marginStart="30dp"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
-                android:src="@drawable/gonggu"
+                android:src="@drawable/_9_1"
                 android:background="@drawable/yellow"/>
             <ImageView
                 android:layout_marginStart="30dp"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
-                android:src="@drawable/playimg"
+                android:src="@drawable/baseline_sports_esports_24"
                 android:background="@drawable/pink"/>
         </LinearLayout>
 
@@ -52,7 +52,7 @@
                     <ImageView
                         android:layout_width="match_parent"
                         android:layout_height="30dp"
-                        android:src="@drawable/gongguimg"
+                        android:src="@drawable/_9"
                         android:layout_gravity="center"/>
                     <TextView
                         android:layout_marginTop="10dp"
@@ -84,7 +84,7 @@
                     <ImageView
                         android:layout_width="match_parent"
                         android:layout_height="30dp"
-                        android:src="@drawable/gonggu"
+                        android:src="@drawable/_9_1"
                         android:layout_gravity="center"/>
                     <TextView
                         android:layout_marginTop="10dp"
@@ -115,7 +115,7 @@
                     <ImageView
                         android:layout_width="match_parent"
                         android:layout_height="30dp"
-                        android:src="@drawable/playimg"
+                        android:src="@drawable/baseline_sports_esports_24"
                         android:layout_gravity="center"/>
                     <TextView
                         android:layout_marginTop="10dp"
