--- a/app/src/main/res/layout/fragment_community.xml
+++ b/app/src/main/res/layout/fragment_community.xml
@@ -51,8 +51,9 @@
                     android:padding="10dp"
                     android:orientation="vertical">
                     <ImageView
+                        android:layout_marginTop="2dp"
                         android:layout_width="match_parent"
-                        android:layout_height="30dp"
+                        android:layout_height="28dp"
                         android:src="@drawable/community_1"
                         android:layout_gravity="center"/>
                     <TextView
