--- a/app/src/main/res/layout/fragment_home1.xml
+++ b/app/src/main/res/layout/fragment_home1.xml
@@ -6,10 +6,105 @@
     tools:context=".fragmentHome.FragmentHome1"
     android:background="@color/white">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="hello_blank_fragment1" />
+        android:padding="20dp">
+        <ImageView
+            android:id="@+id/backBtn"
+            android:layout_width="38dp"
+            android:layout_height="38dp"
+            android:src="@drawable/baseline_arrow_back_24"/>
+        <ImageView
+            android:layout_marginTop="5dp"
+            android:id="@+id/image_cart_09"
+            android:layout_width="match_parent"
+            android:layout_height="33dp"
+            android:src="@drawable/_9"
+            android:gravity="center" />
+
+        <LinearLayout
+            android:layout_marginTop="50dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <EditText
+                android:layout_marginStart="20dp"
+                android:layout_marginEnd="20dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="text"
+                android:maxLines="1"
+                android:backgroundTint="#3c567b"
+                android:drawableLeft="@drawable/search"/>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:gravity="right">
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/arrow_down" />
+
+                <TextView
+                    android:layout_marginStart="10dp"
+                    android:layout_marginEnd="20dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="전체 지역"
+                    android:textStyle="bold"
+                    android:textColor="#3c567b"/>
+            </LinearLayout>
+            <RelativeLayout
+                android:layout_marginTop="10dp"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:background="@drawable/blue">
+                <TextView
+                    android:id="@+id/tag"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="식품"
+                    android:textColor="#B0B0B0"/>
+                <ImageView
+                    android:id="@+id/gonggu_face_post_heart"
+                    android:layout_marginEnd="10dp"
+                    android:layout_toStartOf="@id/star"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/heart"/>
+                <ImageView
+                    android:id="@+id/star"
+                    android:layout_alignParentEnd="true"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/star_blank"/>
+                <TextView
+                    android:layout_below="@id/gonggu_face_post_heart"
+                    android:layout_alignLeft="@id/gonggu_face_post_heart"
+                    android:layout_alignRight="@id/gonggu_face_post_heart"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="10개"
+                    android:textSize="10dp"
+                    android:textStyle="bold"
+                    android:textColor="#3c567b" />
+
+                <ImageView
+                    android:layout_marginTop="5dp"
+                    android:layout_width="70dp"
+                    android:layout_height="70dp"
+                    android:layout_below="@+id/tag"
+                    android:src="@drawable/imgg" />
+            </RelativeLayout>
+
+
+        </LinearLayout>
+
+
+
+    </RelativeLayout>
 
 </FrameLayout>
